[package]
name = "kvs"
version = "1.0.2"
edition = "2021"
description = "A key-value store"
authors = ["geroge <1501790343@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.9", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
