[package]
name = "kvs"
version = "1.0.2"
edition = "2021"
description = "A key-value store"
authors = ["geroge <1501790343@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.9", features = ["derive"] }
failure = { version = "0.1.8", features =["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"